--- a/movie-reviews/package.json
+++ b/movie-reviews/package.json
@@ -9,11 +9,12 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-native-fs": "^2.20.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
