--- a/movie-reviews/package.json
+++ b/movie-reviews/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-native-fs": "^2.20.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
