--- a/movie-reviews/package.json
+++ b/movie-reviews/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-select": "^5.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
